--- a/1-3.ipynb
+++ b/1-3.ipynb
@@ -34,11 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
-    "id": "AhUYjyga-mAw"
+    "id": "AhUYjyga-mAw",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
