--- a/3-3.ipynb
+++ b/3-3.ipynb
@@ -33,9 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "id": "3kjaTfOqEVwY"
+    "id": "3kjaTfOqEVwY",
+    "pycharm": {
+     "is_executing": true
+    }
    },
    "outputs": [],
    "source": [
@@ -44,78 +47,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "8qmTS1RzKRKT",
-    "outputId": "25aa3409-3306-4751-fba7-bd3bcc9e3cad"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 8.4   2.11  1.41]\n",
-      " [13.7   3.53  2.  ]\n",
-      " [15.    3.82  2.43]\n",
-      " [16.2   4.59  2.63]\n",
-      " [17.4   4.59  2.94]\n",
-      " [18.    5.22  3.32]\n",
-      " [18.7   5.2   3.12]\n",
-      " [19.    5.64  3.05]\n",
-      " [19.6   5.14  3.04]\n",
-      " [20.    5.08  2.77]\n",
-      " [21.    5.69  3.56]\n",
-      " [21.    5.92  3.31]\n",
-      " [21.    5.69  3.67]\n",
-      " [21.3   6.38  3.53]\n",
-      " [22.    6.11  3.41]\n",
-      " [22.    5.64  3.52]\n",
-      " [22.    6.11  3.52]\n",
-      " [22.    5.88  3.52]\n",
-      " [22.    5.52  4.  ]\n",
-      " [22.5   5.86  3.62]\n",
-      " [22.5   6.79  3.62]\n",
-      " [22.7   5.95  3.63]\n",
-      " [23.    5.22  3.63]\n",
-      " [23.5   6.28  3.72]\n",
-      " [24.    7.29  3.72]\n",
-      " [24.    6.38  3.82]\n",
-      " [24.6   6.73  4.17]\n",
-      " [25.    6.44  3.68]\n",
-      " [25.6   6.56  4.24]\n",
-      " [26.5   7.17  4.14]\n",
-      " [27.3   8.32  5.14]\n",
-      " [27.5   7.17  4.34]\n",
-      " [27.5   7.05  4.34]\n",
-      " [27.5   7.28  4.57]\n",
-      " [28.    7.82  4.2 ]\n",
-      " [28.7   7.59  4.64]\n",
-      " [30.    7.62  4.77]\n",
-      " [32.8  10.03  6.02]\n",
-      " [34.5  10.26  6.39]\n",
-      " [35.   11.49  7.8 ]\n",
-      " [36.5  10.88  6.86]\n",
-      " [36.   10.61  6.74]\n",
-      " [37.   10.84  6.26]\n",
-      " [37.   10.57  6.37]\n",
-      " [39.   11.14  7.49]\n",
-      " [39.   11.14  6.  ]\n",
-      " [39.   12.43  7.35]\n",
-      " [40.   11.93  7.11]\n",
-      " [40.   11.73  7.22]\n",
-      " [40.   12.38  7.46]\n",
-      " [40.   11.14  6.63]\n",
-      " [42.   12.8   6.87]\n",
-      " [43.   11.93  7.28]\n",
-      " [43.   12.51  7.42]\n",
-      " [43.5  12.6   8.14]\n",
-      " [44.   12.49  7.6 ]]\n"
-     ]
+    "outputId": "25aa3409-3306-4751-fba7-bd3bcc9e3cad",
+    "pycharm": {
+     "is_executing": true
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "df = pd.read_csv('https://bit.ly/perch_csv_data')\n",
     "perch_full = df.to_numpy()\n",
