--- a/Aimers hackerton/Aimers_RF.ipynb
+++ b/Aimers hackerton/Aimers_RF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {
     "collapsed": true
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "outputs": [],
    "source": [
     "def seed_everything(seed):\n",
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "outputs": [],
    "source": [
     "train_df = pd.read_csv('/Users/sola/Downloads/open/train.csv')\n",
@@ -46,13 +46,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PRODUCT_ID      0\nY_Class         0\nY_Quality       0\nTIMESTAMP       0\nLINE            0\n             ... \nX_2871        499\nX_2872        598\nX_2873        598\nX_2874        598\nX_2875        598\nLength: 2881, dtype: int64"
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/js/792bsrvx24lcg4nrdgy7k5br0000gn/T/ipykernel_2879/1987006743.py:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  train_df=train_df.fillna(train_df.mean())\n",
+      "/var/folders/js/792bsrvx24lcg4nrdgy7k5br0000gn/T/ipykernel_2879/1987006743.py:3: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "  test_df=test_df.fillna(test_df.mean())\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결측치에 평균 넣어주기\n",
+    "train_df=train_df.fillna(train_df.mean())\n",
+    "test_df=test_df.fillna(test_df.mean())"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PRODUCT_ID      0\nY_Class         0\nY_Quality       0\nTIMESTAMP       0\nLINE            0\n             ... \nX_2871          0\nX_2872        598\nX_2873        598\nX_2874        598\nX_2875        598\nLength: 2881, dtype: int64"
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PRODUCT_ID      0\nTIMESTAMP       0\nLINE            0\nPRODUCT_CODE    0\nX_1             0\n               ..\nX_2871          0\nX_2872          0\nX_2873          0\nX_2874          0\nX_2875          0\nLength: 2879, dtype: int64"
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "outputs": [],
+   "source": [
+    "train_df = train_df.fillna(0)\n",
+    "test_df = test_df.fillna(0)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PRODUCT_ID    0\nY_Class       0\nY_Quality     0\nTIMESTAMP     0\nLINE          0\n             ..\nX_2871        0\nX_2872        0\nX_2873        0\nX_2874        0\nX_2875        0\nLength: 2881, dtype: int64"
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [],
+   "source": [
+    "# 프로더그 코드별로 구분시켜서 학습시키려고..\n",
+    "\n",
+    "# atr = train_df[train_df[\"PRODUCT_CODE\"]==\"A_31\"]\n",
+    "# ttr = train_df[train_df[\"PRODUCT_CODE\"]==\"T_31\"]\n",
+    "# otr = train_df[train_df[\"PRODUCT_CODE\"]==\"O_31\"]"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
    "outputs": [],
    "source": [
     "train_x = train_df.drop(columns=['PRODUCT_ID', 'TIMESTAMP', 'Y_Class', 'Y_Quality'])\n",
     "train_y = train_df['Y_Class']\n",
     "\n",
-    "test_x = test_df.drop(columns=['PRODUCT_ID', 'TIMESTAMP'])"
+    "test_x = test_df.drop(columns=['PRODUCT_ID', 'TIMESTAMP'])\n",
+    "# test_y = test_df['Y_Class']"
    ],
    "metadata": {
     "collapsed": false
@@ -60,12 +192,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['LINE', 'PRODUCT_CODE', 'X_1', 'X_2', 'X_3', 'X_4', 'X_5', 'X_6', 'X_7',\n       'X_8',\n       ...\n       'X_2866', 'X_2867', 'X_2868', 'X_2869', 'X_2870', 'X_2871', 'X_2872',\n       'X_2873', 'X_2874', 'X_2875'],\n      dtype='object', length=2877)"
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_x.columns"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "outputs": [],
    "source": [
-    "# 여기선 결측치에 0을 넣어줬네..\n",
-    "train_x = train_x.fillna(0)\n",
-    "test_x = test_x.fillna(0)"
+    "# 결측치에 평균 넣어주기\n",
+    "# for i in range(1,2876):\n",
+    "#     co = \"X_\" + str(i)\n",
+    "#     train_df.loc[train_df[co].isna(), co]= train_df[co].mean()\n",
+    "#\n",
+    "# for i in range(1,2876):\n",
+    "#     co = \"X_\" + str(i)\n",
+    "#     test_df.loc[test_df[co].isna(), co]= test_df[co].mean()"
    ],
    "metadata": {
     "collapsed": false
@@ -73,8 +230,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "LINE            0\nPRODUCT_CODE    0\nX_1             0\nX_2             0\nX_3             0\n               ..\nX_2871          0\nX_2872          0\nX_2873          0\nX_2874          0\nX_2875          0\nLength: 2877, dtype: int64"
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_x.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "outputs": [],
+   "source": [
+    "# # 결측치에 0을 넣어줬네..\n",
+    "# train_x = train_x.fillna(0)\n",
+    "# test_x = test_x.fillna(0)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "# 범주형을 수치형으로 변환하는 과정\n",
     "qual_col = ['LINE', 'PRODUCT_CODE']\n",
@@ -89,6 +287,202 @@
     "            le.classes_ = np.append(le.classes_, label)\n",
     "    test_x[i] = le.transform(test_x[i])\n",
     "print('Done.')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "outputs": [],
+   "source": [
+    "RF = RandomForestClassifier(n_jobs = -1 ,random_state=37)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "outputs": [],
+   "source": [
+    "# 교차검증\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "scores = cross_validate(RF, train_x, train_y, return_train_score=True, n_jobs=-1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0 0.5599439775910364\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(scores['train_score']), np.mean(scores['test_score']))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "이제 fitting 시키기"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "RandomForestClassifier(n_jobs=-1, random_state=37)"
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# fit\n",
+    "RF.fit(train_x, train_y)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "LINE            0\nPRODUCT_CODE    0\nX_1             0\nX_2             0\nX_3             0\n               ..\nX_2871          0\nX_2872          0\nX_2873          0\nX_2874          0\nX_2875          0\nLength: 2877, dtype: int64"
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_x.isnull().sum()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "outputs": [],
+   "source": [
+    "preds = RF.predict(test_x)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 1, 1, 1, 1,\n       1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 1, 1, 0, 1, 1,\n       1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 0, 1, 1, 1, 0, 0, 0, 0,\n       0, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1,\n       0, 1, 2, 1, 2, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 1, 1, 1, 2, 0, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 2, 2, 1, 1, 2, 1, 1, 1, 0, 1,\n       1, 1, 2, 1, 1, 2, 2, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 1, 0, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 2, 2, 1, 2, 1, 1, 1, 1, 1, 2, 1, 0, 1, 1, 1, 1,\n       1, 1, 1, 2, 2, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 2, 0, 0, 0, 2, 2, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2,\n       1, 1, 1, 1, 1, 1, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n       1, 1])"
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "outputs": [],
+   "source": [
+    "submit = pd.read_csv('/Users/sola/Downloads/open/sample_submission.csv')"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "outputs": [],
+   "source": [
+    "submit['Y_Class'] = preds"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "outputs": [],
+   "source": [
+    "submit.to_csv('/Users/sola/Downloads/open/baseline_submission2.csv', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "결측치에 모두 0을 넣으면 정확도는 0.5495720225, 136등임..."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "결측치에 평균값넣고 아무것도 없는 컬럼에는 0을 넣으면 정확도는 0.4457953394임...\n",
+    "왜 더 내려갔누..."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# from sklearn.metrics import accuracy_score\n",
+    "# accuracy = accuracy_score(test_y, preds)\n",
+    "# print('랜덤 포레스트 정확도: {:.4f}'.format(accuracy))"
    ],
    "metadata": {
     "collapsed": false
