--- a/Aimers hackerton/Aimers_RF_sample.ipynb
+++ b/Aimers hackerton/Aimers_RF_sample.ipynb
@@ -191,7 +191,7 @@
     }
    ],
    "source": [
-    "print(sorted(RF.feature_importances_))"
+    "# print(sorted(RF.feature_importances_))"
    ],
    "metadata": {
     "collapsed": false
