--- a/Aimers hackerton/Aimers_범주형데이터이진분류.ipynb
+++ b/Aimers hackerton/Aimers_범주형데이터이진분류.ipynb
@@ -509,14 +509,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 45,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "LogisticRegression(max_iter=1000, random_state=37)"
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 모델 훈련\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "lr = LogisticRegression(max_iter=1000, random_state=37)\n",
+    "lr.fit(X_train, y_train)"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%ㄹ\n"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[3.56518524e-02, 8.11016274e-01, 1.53331874e-01],\n       [3.87536525e-03, 9.95476436e-01, 6.48198983e-04],\n       [2.56693214e-01, 7.06798536e-01, 3.65082502e-02],\n       [5.84165921e-03, 1.34573945e-01, 8.59584396e-01],\n       [3.05945455e-03, 9.92804721e-01, 4.13582404e-03],\n       [8.63710197e-01, 1.12709861e-01, 2.35799416e-02],\n       [1.12098254e-02, 9.83614579e-01, 5.17559573e-03],\n       [2.40405582e-03, 9.97377830e-01, 2.18114040e-04],\n       [2.63618139e-02, 7.99995591e-01, 1.73642595e-01],\n       [1.23973710e-02, 8.02440332e-01, 1.85162297e-01],\n       [1.35072995e-02, 8.38945155e-01, 1.47547545e-01],\n       [1.62895464e-01, 8.22035469e-01, 1.50690674e-02],\n       [6.40878111e-01, 3.19899331e-01, 3.92225580e-02],\n       [7.24471013e-03, 9.77459477e-01, 1.52958125e-02],\n       [1.95088162e-02, 8.04303807e-01, 1.76187377e-01],\n       [4.21537867e-02, 9.46693785e-01, 1.11524288e-02],\n       [2.80861976e-03, 8.14263490e-04, 9.96377117e-01],\n       [1.12137593e-03, 9.98191401e-01, 6.87222567e-04],\n       [4.04140014e-03, 9.90921723e-01, 5.03687730e-03],\n       [5.27817295e-04, 9.97157873e-01, 2.31430991e-03],\n       [9.29559008e-02, 4.01140248e-01, 5.05903852e-01],\n       [2.65358736e-03, 9.91741259e-01, 5.60515391e-03],\n       [6.80575953e-04, 9.98536355e-01, 7.83068676e-04],\n       [8.75547004e-01, 1.05126634e-01, 1.93263616e-02],\n       [7.66841861e-04, 9.93376703e-01, 5.85645488e-03],\n       [1.15330494e-02, 9.55706999e-01, 3.27599513e-02],\n       [1.04621385e-03, 9.95924105e-01, 3.02968106e-03],\n       [5.72990461e-02, 3.41179172e-01, 6.01521782e-01],\n       [5.48984213e-01, 2.21899864e-01, 2.29115923e-01],\n       [9.57340018e-01, 1.98473758e-02, 2.28126066e-02],\n       [7.72617429e-03, 9.83715084e-01, 8.55874189e-03],\n       [1.42905508e-02, 9.82601379e-01, 3.10807056e-03],\n       [6.83180766e-04, 9.98797286e-01, 5.19533619e-04],\n       [3.85615907e-03, 9.89179463e-01, 6.96437750e-03],\n       [1.25841746e-02, 9.65132915e-01, 2.22829101e-02],\n       [2.35680890e-03, 9.92273749e-01, 5.36944208e-03],\n       [1.33297757e-03, 9.84422363e-01, 1.42446599e-02],\n       [3.59590889e-03, 9.93476335e-01, 2.92775629e-03],\n       [4.54337791e-02, 9.32231015e-01, 2.23352063e-02],\n       [4.89233572e-04, 9.95941063e-01, 3.56970360e-03],\n       [3.86500412e-03, 9.90128003e-01, 6.00699289e-03],\n       [1.14647644e-03, 9.98245884e-01, 6.07639991e-04],\n       [8.21969188e-01, 1.34321027e-01, 4.37097852e-02],\n       [3.68316027e-03, 1.32330850e-03, 9.94993531e-01],\n       [1.44750664e-01, 8.51051379e-01, 4.19795682e-03],\n       [4.11793469e-02, 4.22759473e-01, 5.36061180e-01],\n       [3.07728395e-01, 1.17698247e-01, 5.74573358e-01],\n       [2.01699967e-04, 9.95733440e-01, 4.06486051e-03],\n       [9.48320531e-01, 4.77112567e-02, 3.96821249e-03],\n       [4.17708571e-02, 9.36142665e-01, 2.20864779e-02],\n       [5.25543666e-03, 8.17620528e-04, 9.93926943e-01],\n       [1.32117255e-02, 9.67828044e-01, 1.89602308e-02],\n       [2.30872241e-02, 9.66821504e-01, 1.00912717e-02],\n       [2.65748536e-03, 9.96080567e-01, 1.26194797e-03],\n       [3.33009390e-03, 9.91134100e-01, 5.53580584e-03],\n       [8.51416794e-03, 9.64079088e-01, 2.74067444e-02],\n       [1.36422937e-03, 9.96401590e-01, 2.23418079e-03],\n       [1.44348847e-03, 9.97964081e-01, 5.92430704e-04],\n       [1.62904668e-02, 9.43923386e-01, 3.97861467e-02],\n       [5.80725665e-04, 9.98245349e-01, 1.17392548e-03]])"
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 모델 성능 검증\n",
+    "lr.predict_proba(X_valid)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1 2 1 0 1 1 1 1 1 1 0 1 1 1 2 1 1 1 2 1 1 0 1 1 1 2 0 0 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 0 2 1 2 2 1 0 1 2 1 1 1 1 1 1 1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(lr.predict(X_valid))"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
