--- a/Aimers hackerton/feature중요도로 HGB.ipynb
+++ b/Aimers hackerton/feature중요도로 HGB.ipynb
@@ -188,7 +188,7 @@
     "test_x = test[a]\n",
     "\n",
     "X_train, X_valid, y_train, y_valid = train_test_split(train_x, y, test_size=0.3, random_state=37)\n",
-    "\n",
+    "rf = RandomForestClassifier\n",
     "rf.fit(X_train, y_train)\n",
     "\n",
     "from sklearn.metrics import accuracy_score\n",
